--- a/style.css
+++ b/style.css
@@ -5,25 +5,51 @@
   background-color: black;
   opacity: .5; }
 
+#logo {
+  width: 50px;
+  height: 40px;
+  background-color: black; }
+
 #imago {
   background-image: url("images/graffitti.jpeg");
   text-align: center;
-  height: 800px;
+  height: 1500px;
   opacity: .8; }
+  #imago #titleText {
+    margin: auto;
+    width: 800px; }
+    #imago #titleText #explain {
+      font-family: 'Indie Flower', cursive;
+      font-size: 48px;
+      padding-bottom: 30px;
+      color: white; }
+    #imago #titleText #error {
+      color: red;
+      font-size: 20px; }
 
 #searchBox {
+  display: inline;
   height: 40px;
   width: 500px;
-  margin-top: 210px;
+  margin-top: 250px;
   font-size: 20px;
-  margin-left: 250px;
-  text-align: center; }
+  margin-left: 265px;
+  text-align: center;
+  background-color: black;
+  border: 1px black solid;
+  color: white;
+  margin: auto; }
 
 #subBut {
+  display: inline;
+  font-family: 'Indie Flower', cursive;
+  font-size: 28px;
   height: 43px;
   width: 200px;
-  margin-top: 170px;
-  font-weight: bold; }
+  font-weight: bold;
+  background-color: black;
+  color: white;
+  border: 1px red solid; }
 
 h3 {
   color: white; }
@@ -32,15 +58,16 @@ body {
   background-color: black; }
 
 #soundcloud {
-  margin-top: 80px; }
+  margin-top: 30px; }
 
 #rhymeBox {
-  height: 500px;
-  width: 300px;
-  border: 1px white solid;
+  width: 500px;
+  opacity: .5;
   margin: auto;
-  background-color: white;
-  color: black; }
+  background-color: gray;
+  color: white;
+  font-size: 22px;
+  font-weight: bolder; }
 
 #wordBox {
   font-size: 20px;
