responsive design changes

--- a/style.css
+++ b/style.css
@@ -27,9 +27,19 @@
       color: red;
       font-size: 20px; }
 
+@media only screen and (max-device-width: 620px) {
+  #titleText {
+    margin: auto;
+    width: 200px;
+    height: 200px; }
+    #titleText #explain {
+      font-family: 'Indie Flower', cursive;
+      font-size: 20px;
+      padding-bottom: 30px;
+      color: blue; } }
 #searchBox {
   display: inline;
-  height: 40px;
+  height: 43px;
   width: 500px;
   margin-top: 250px;
   font-size: 20px;
@@ -40,6 +50,19 @@
   color: white;
   margin: auto; }
 
+@media only screen and (max-device-width: 620px) {
+  #searchBox {
+    display: inline;
+    height: 85px;
+    width: 350px;
+    margin-top: 250px;
+    font-size: 48px;
+    margin-left: 265px;
+    text-align: center;
+    background-color: black;
+    border: 1px black solid;
+    color: white;
+    margin: auto; } }
 #subBut {
   display: inline;
   font-family: 'Indie Flower', cursive;
@@ -51,6 +74,23 @@
   color: white;
   border: 1px red solid; }
 
+@media only screen and (max-device-width: 620px) {
+  #subBut {
+    display: inline;
+    font-family: 'Indie Flower', cursive;
+    font-size: 52px;
+    height: 100px;
+    width: 200px;
+    font-weight: bold;
+    background-color: black;
+    color: white;
+    border: 1px red solid; } }
+@media only screen and (max-device-width: 620px) {
+  select {
+    -webkit-appearance: menulist-button;
+    height: 50px;
+    width: 60px;
+    font-size: 20px; } }
 h3 {
   color: white; }
 
@@ -69,6 +109,15 @@ body {
   font-size: 22px;
   font-weight: bolder; }
 
+@media only screen and (max-device-width: 620px) {
+  #rhymeBox {
+    width: 500px;
+    opacity: .5;
+    margin: auto;
+    background-color: gray;
+    color: white;
+    font-size: 36px;
+    font-weight: bolder; } }
 #wordBox {
   font-size: 20px;
   font-weight: bold; }
