--- a/style.css
+++ b/style.css
@@ -5,6 +5,38 @@
   background-color: black;
   opacity: .5; }
 
+.navbar .nav > li > a, .navbar .nav > li > a:first-letter, .navbar .nav > li.current-menu-item > a, .navbar .nav > li.current-menu-ancestor > a {
+  margin-top: 20px;
+  display: inline;
+  font-size: 28px; }
+
+.navbar-nav > li > a, .navbar-brand {
+  padding-bottom: 0;
+  height: 28px; }
+
+.navbar-nav > li {
+  margin-top: 20px; }
+
+.navbar {
+  min-height: 32px; }
+
+@media only screen and (min-device-width: 630px) {
+  .navbar .nav > li > a, .navbar .nav > li > a:first-letter, .navbar .nav > li.current-menu-item > a, .navbar .nav > li.current-menu-ancestor > a {
+    margin-top: 40px;
+    display: inline;
+    font-size: 30px; }
+
+  .navbar-nav > li > a, .navbar-brand {
+    padding-top: 4px;
+    padding-bottom: 0;
+    height: 28px; }
+
+  .navbar-nav > li {
+    margin-top: 30px;
+    margin-left: 0px; }
+
+  .navbar {
+    min-height: 80px; } }
 #logo {
   width: 50px;
   height: 40px;
@@ -23,11 +55,12 @@
       font-size: 48px;
       padding-bottom: 30px;
       color: white; }
-    #imago #titleText #error {
+    #imago #titleText #errorMessage {
+      font-family: 'Indie Flower', cursive;
       color: red;
       font-size: 20px; }
 
-@media only screen and (max-device-width: 620px) {
+@media only screen and (max-device-width: 630px) {
   #titleText {
     margin: auto;
     width: 200px;
@@ -37,6 +70,10 @@
       font-size: 20px;
       padding-bottom: 30px;
       color: blue; } }
+@media only screen and (max-device-width: 630px) {
+  #error {
+    color: red;
+    font-size: 60px; } }
 #searchBox {
   display: inline;
   height: 43px;
@@ -50,13 +87,13 @@
   color: white;
   margin: auto; }
 
-@media only screen and (max-device-width: 620px) {
+@media only screen and (max-device-width: 630px) {
   #searchBox {
     display: inline;
-    height: 85px;
+    height: 100px;
     width: 350px;
     margin-top: 250px;
-    font-size: 48px;
+    font-size: 55px;
     margin-left: 265px;
     text-align: center;
     background-color: black;
@@ -66,31 +103,44 @@
 #subBut {
   display: inline;
   font-family: 'Indie Flower', cursive;
-  font-size: 28px;
-  height: 43px;
+  font-size: 40px;
+  height: 100px;
   width: 200px;
   font-weight: bold;
   background-color: black;
   color: white;
   border: 1px red solid; }
 
-@media only screen and (max-device-width: 620px) {
+#subRecent {
+  display: inline;
+  font-family: 'Indie Flower', cursive;
+  font-size: 38px;
+  height: 200px;
+  width: 900px;
+  font-weight: bold;
+  background-color: black;
+  color: white;
+  border: 5px red solid;
+  padding: 10px;
+  margin-top: 30px; }
+
+@media only screen and (max-device-width: 630px) {
   #subBut {
     display: inline;
     font-family: 'Indie Flower', cursive;
     font-size: 52px;
-    height: 100px;
-    width: 200px;
+    height: 200px;
+    width: 300px;
     font-weight: bold;
     background-color: black;
     color: white;
     border: 1px red solid; } }
-@media only screen and (max-device-width: 620px) {
+@media only screen and (max-device-width: 630px) {
   select {
     -webkit-appearance: menulist-button;
-    height: 50px;
-    width: 60px;
-    font-size: 20px; } }
+    height: 100px;
+    width: 190px;
+    font-size: 38px; } }
 h3 {
   color: white; }
 
@@ -98,8 +148,14 @@ body {
   background-color: black; }
 
 #soundcloud {
-  margin-top: 30px; }
+  margin-top: 30px;
+  height: 800px;
+  width: 800px; }
 
+@media only screen and (max-device-width: 630px) {
+  #soundcloud {
+    height: 800px;
+    width: 700px; } }
 #rhymeBox {
   width: 500px;
   opacity: .5;
@@ -109,7 +165,7 @@ body {
   font-size: 22px;
   font-weight: bolder; }
 
-@media only screen and (max-device-width: 620px) {
+@media only screen and (max-device-width: 630px) {
   #rhymeBox {
     width: 500px;
     opacity: .5;
@@ -121,5 +177,31 @@ body {
 #wordBox {
   font-size: 20px;
   font-weight: bold; }
+
+#recentWords {
+  margin-top: 50px;
+  display: flex;
+  flex-wrap: wrap;
+  opacity: .5;
+  background-color: gray;
+  color: white;
+  font-size: 22px;
+  font-weight: bolder;
+  justify-content: center; }
+
+#rwords {
+  color: blue;
+  text-decoration: underline;
+  font-size: 26px; }
+
+.columnDivs {
+  color: black;
+  width: 200px;
+  border: 5px red solid;
+  flex: auto; }
+
+.highlight {
+  background: yellow;
+  color: black; }
 
 /*# sourceMappingURL=style.css.map */
