--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@
   .navbar .nav > li > a, .navbar .nav > li > a:first-letter, .navbar .nav > li.current-menu-item > a, .navbar .nav > li.current-menu-ancestor > a {
     margin-top: 40px;
     display: inline;
-    font-size: 30px; }
+    font-size: 38px; }
 
   .navbar-nav > li > a, .navbar-brand {
     padding-top: 4px;
@@ -58,7 +58,12 @@
     #imago #titleText #errorMessage {
       font-family: 'Indie Flower', cursive;
       color: red;
-      font-size: 20px; }
+      font-size: 30px; }
+
+#screenEM {
+  font-family: 'Indie Flower', cursive;
+  color: red;
+  font-size: 46px; }
 
 @media only screen and (max-device-width: 630px) {
   #titleText {
@@ -95,6 +100,7 @@
     margin-top: 250px;
     font-size: 55px;
     margin-left: 265px;
+    margin-top: 100px;
     text-align: center;
     background-color: black;
     border: 1px black solid;
@@ -134,7 +140,8 @@
     font-weight: bold;
     background-color: black;
     color: white;
-    border: 1px red solid; } }
+    border: 1px red solid;
+    margin-top: 50px; } }
 @media only screen and (max-device-width: 630px) {
   select {
     -webkit-appearance: menulist-button;
