--- a/style.scss
+++ b/style.scss
@@ -1,249 +1,247 @@
 #test {
-	border: 4px red solid; 
-	text-align: center;
-	// background-image: url("images/mic.jpeg");
-	color: white;
-	background-color: black;
-	opacity: .5;
+    border: 4px red solid;
+    text-align: center;
+    // background-image: url("images/mic.jpeg");
+    color: white;
+    background-color: black;
+    opacity: .5;
 }
 
 .navbar .nav > li > a, .navbar .nav > li > a:first-letter, .navbar .nav > li.current-menu-item > a, .navbar .nav > li.current-menu-ancestor > a {
-		margin-top: 20px;
-		display: inline;                      
-		font-size: 28px;
-	}
-	.navbar-nav > li > a, .navbar-brand {
-	    padding-bottom:0;
-	    height: 28px;
-	}
-
-	.navbar-nav > li {
-		margin-top: 20px;
-
-	}
-
-	.navbar {
-		min-height: 32px;
-	}
-
-
-@media only screen and (min-device-width : 630px) {
-	.navbar .nav > li > a, .navbar .nav > li > a:first-letter, .navbar .nav > li.current-menu-item > a, .navbar .nav > li.current-menu-ancestor > a {
-		margin-top: 40px;
-		display: inline;                      
-		font-size: 30px;
-	}
-	.navbar-nav > li > a, .navbar-brand {
-	    padding-top:4px; 
-	    padding-bottom:0;
-	    height: 28px;
-	}
-
-	.navbar-nav > li {
-		margin-top: 30px;
-		margin-left: 0px;
-	}
-
-	.navbar {
-		min-height:80px;
-	}
+    margin-top: 20px;
+    display: inline;
+    font-size: 28px;
 }
 
-#logo{
-	width: 50px;
-	height: 40px;
-	background-color: black;
+.navbar-nav > li > a, .navbar-brand {
+    padding-bottom: 0;
+    height: 28px;
 }
 
-#imago{
-	background-image: url("images/graffitti.jpeg");
-	text-align: center;
-	height: 1500px;
-	opacity: .8;
-	#titleText{
-		margin: auto;
-		width: 800px;
-		#explain{
-			font-family: 'Indie Flower', cursive;
-			font-size: 48px;
-			padding-bottom: 30px;
-			color: white;
-		}
-		#errorMessage{
-			font-family: 'Indie Flower', cursive;
-			color: red;
-			font-size: 20px;
-		}
-	}
-
+.navbar-nav > li {
+    margin-top: 20px;
 }
 
-@media only screen and (max-device-width : 630px) {
-	#titleText{
-		margin:auto;
-		width: 200px;
-		height: 200px;
-		
-		#explain{
-			font-family: 'Indie Flower', cursive;
-			font-size: 20px;
-			padding-bottom: 30px;
-			color: blue;
-		}
-		
-	}
+.navbar {
+    min-height: 32px;
 }
 
-
-@media only screen and (max-device-width : 630px) {
-	#error{
-		color: red;
-		font-size: 60px;
-		}
-	}
-
-#searchBox{
-	display: inline;
-	// height: 40px;
-	height: 43px;
-	width: 500px;
-	margin-top: 250px;
-	font-size: 20px;
-	margin-left: 265px;
-	text-align: center;
-	background-color: black;
-	border: 1px black solid;
-	color: white;
-	margin: auto;
-
-}
-@media only screen and (max-device-width : 630px) {
-	#searchBox{
-		display: inline;
-		height: 100px;
-		width: 350px;
-		margin-top: 250px;
-		font-size: 55px;
-		margin-left: 265px;
-		text-align: center;
-		background-color: black;
-		border: 1px black solid;
-		color: white;
-		margin: auto;
-	}
-
+@media only screen and (min-device-width: 630px) {
+    .navbar .nav > li > a, .navbar .nav > li > a:first-letter, .navbar .nav > li.current-menu-item > a, .navbar .nav > li.current-menu-ancestor > a {
+        margin-top: 40px;
+        display: inline;
+        font-size: 38px;
+    }
+    .navbar-nav > li > a, .navbar-brand {
+        padding-top: 4px;
+        padding-bottom: 0;
+        height: 28px;
+    }
+    .navbar-nav > li {
+        margin-top: 30px;
+        margin-left: 0px;
+    }
+    .navbar {
+        min-height: 80px;
+    }
 }
 
-#subBut{
-	display: inline;
-	font-family: 'Indie Flower', cursive;
-	font-size: 40px;
-	height: 100px;
-	width: 200px;
-	font-weight: bold;
-	background-color: black;
-	color: white;
-	border: 1px red solid;
+#logo {
+    width: 50px;
+    height: 40px;
+    background-color: black;
 }
 
-#subRecent{
-	display: inline;
-	font-family: 'Indie Flower', cursive;
-	font-size: 38px;
-	height: 200px;
-	width: 900px;
-	font-weight: bold;
-	background-color: black;
-	color: white;
-	border: 5px red solid;
-	padding: 10px;
-	margin-top: 30px;
+#imago {
+    background-image: url("images/graffitti.jpeg");
+    text-align: center;
+    height: 1500px;
+    opacity: .8;
+    #titleText {
+        margin: auto;
+        width: 800px;
+        #explain {
+            font-family: 'Indie Flower', cursive;
+            font-size: 48px;
+            padding-bottom: 30px;
+            color: white;
+        }
+        #errorMessage {
+            font-family: 'Indie Flower', cursive;
+            color: red;
+            font-size: 30px;
+        }
+    }
 }
 
-@media only screen and (max-device-width : 630px) {
-	#subBut{
-		display: inline;
-		font-family: 'Indie Flower', cursive;
-		font-size: 52px;
-		height: 200px;
-		width: 300px;
-		font-weight: bold;
-		background-color: black;
-		color: white;
-		border: 1px red solid;
-	}
+#screenEM {
+    font-family: 'Indie Flower', cursive;
+    color: red;
+    font-size: 46px;
 }
 
-@media only screen and (max-device-width : 630px) {
-	select{
-	   -webkit-appearance: menulist-button;
-	   height: 100px;
-	   width: 190px;
-	   font-size: 38px;
-	}
+@media only screen and (max-device-width: 630px) {
+    #titleText {
+        margin: auto;
+        width: 200px;
+        height: 200px;
+        #explain {
+            font-family: 'Indie Flower', cursive;
+            font-size: 20px;
+            padding-bottom: 30px;
+            color: blue;
+        }
+    }
 }
 
-
-h3{
-	color: white;
+@media only screen and (max-device-width: 630px) {
+    #error {
+        color: red;
+        font-size: 60px;
+    }
 }
 
-body{
-	background-color: black;
+#searchBox {
+    display: inline;
+    // height: 40px;
+    height: 43px;
+    width: 500px;
+    margin-top: 250px;
+    font-size: 20px;
+    margin-left: 265px;
+    text-align: center;
+    background-color: black;
+    border: 1px black solid;
+    color: white;
+    margin: auto;
 }
 
-#soundcloud{
-	margin-top: 30px;
-	height: 800px;
-	width: 800px;
+@media only screen and (max-device-width: 630px) {
+    #searchBox {
+        display: inline;
+        height: 100px;
+        width: 350px;
+        margin-top: 250px;
+        font-size: 55px;
+        margin-left: 265px;
+        margin-top: 100px;
+        text-align: center;
+        background-color: black;
+        border: 1px black solid;
+        color: white;
+        margin: auto;
+    }
 }
 
-@media only screen and (max-device-width : 630px){
-	#soundcloud{
-		height: 800px;
-		width: 700px;
-	}
+#subBut {
+    display: inline;
+    font-family: 'Indie Flower', cursive;
+    font-size: 40px;
+    height: 100px;
+    width: 200px;
+    font-weight: bold;
+    background-color: black;
+    color: white;
+    border: 1px red solid;
 }
 
-#rhymeBox{
-	width: 500px;
-	opacity: .5;
-	margin: auto;
-	background-color: gray;
-	color: white;
-	font-size: 22px;
-	font-weight: bolder;
+#subRecent {
+    display: inline;
+    font-family: 'Indie Flower', cursive;
+    font-size: 38px;
+    height: 200px;
+    width: 900px;
+    font-weight: bold;
+    background-color: black;
+    color: white;
+    border: 5px red solid;
+    padding: 10px;
+    margin-top: 30px;
 }
 
-@media only screen and (max-device-width : 630px){
-	#rhymeBox{
-		width: 500px;
-		opacity: .5;
-		margin: auto;
-		background-color: gray;
-		color: white;
-		font-size: 36px;
-		font-weight: bolder;
-	}
+@media only screen and (max-device-width: 630px) {
+    #subBut {
+        display: inline;
+        font-family: 'Indie Flower', cursive;
+        font-size: 52px;
+        height: 200px;
+        width: 300px;
+        font-weight: bold;
+        background-color: black;
+        color: white;
+        border: 1px red solid;
+        margin-top: 50px;
+    }
 }
 
-#wordBox{
-	font-size: 20px;
-	font-weight: bold;
+@media only screen and (max-device-width: 630px) {
+    select {
+        -webkit-appearance: menulist-button;
+        height: 100px;
+        width: 190px;
+        font-size: 38px;
+    }
 }
 
-#recentWords{
-	margin-top: 50px;
-	display: flex;
-	flex-wrap: wrap;
-	opacity: .5;
-	background-color: gray;
-	color: white;
-	font-size: 22px;
-	font-weight: bolder;
-	// width: 89.2%;
-	justify-content: center;
+h3 {
+    color: white;
+}
 
+body {
+    background-color: black;
+}
+
+#soundcloud {
+    margin-top: 30px;
+    height: 800px;
+    width: 800px;
+}
+
+@media only screen and (max-device-width: 630px) {
+    #soundcloud {
+        height: 800px;
+        width: 700px;
+    }
+}
+
+#rhymeBox {
+    width: 500px;
+    opacity: .5;
+    margin: auto;
+    background-color: gray;
+    color: white;
+    font-size: 22px;
+    font-weight: bolder;
+}
+
+@media only screen and (max-device-width: 630px) {
+    #rhymeBox {
+        width: 500px;
+        opacity: .5;
+        margin: auto;
+        background-color: gray;
+        color: white;
+        font-size: 36px;
+        font-weight: bolder;
+    }
+}
+
+#wordBox {
+    font-size: 20px;
+    font-weight: bold;
+}
+
+#recentWords {
+    margin-top: 50px;
+    display: flex;
+    flex-wrap: wrap;
+    opacity: .5;
+    background-color: gray;
+    color: white;
+    font-size: 22px;
+    font-weight: bolder;
+    // width: 89.2%;
+    justify-content: center;
 }
 
 // #recentWordBox{
@@ -256,28 +254,21 @@ body{
 // 	font-size: 22px;
 // 	font-weight: bolder;
 // 	width: 50%;
-	
 // }
-
-#rwords{
-		color: blue;
-		text-decoration: underline;
-		font-size: 26px;
-
-	}
-
+#rwords {
+    color: blue;
+    text-decoration: underline;
+    font-size: 26px;
+}
 
 .columnDivs {
-	color: black;
-	width: 200px;
-	border: 5px red solid;
-	flex: auto;
-
-
+    color: black;
+    width: 200px;
+    border: 5px red solid;
+    flex: auto;
 }
 
 .highlight {
-
-	background: yellow;
-	color: black;
+    background: yellow;
+    color: black;
 }
